# 2-wheels-1-arm

./: .gitignore  .gitmodules  CONTRIBUTING.md  README.md  package.json  routes.js  server.js
2w1a_sample_code/: 2w1aTest.py
algorithm/: .gitignore  CMakeLists.txt  Makefile  binding.gyp  cppAlgorithm.js  index.js
algorithm/cpp/: AThreadedDataHandler.cpp  AThreadedDataHandler.hpp  AlgoParameters.hpp  Articulation.cpp  Articulation.hpp  BackupDataController.cpp  BackupDataController.hpp  Client.cpp  Client.hpp  Degrees.cpp  Degrees.hpp  GeneticAlgoController.cpp  GeneticAlgoController.hpp  Genome.cpp  Genome.hpp  IDataHandler.hpp  Individual.hpp  MainController.cpp  MainController.hpp  Maths.cpp  Maths.hpp  MotherNature.hpp  Object.cpp  Object.hpp  Physics.cpp  Physics.hpp  Radians.cpp  Radians.hpp  Random.cpp  Random.hpp  ResultModel.cpp  ResultModel.hpp  VrepAPI.hpp  WebServerBridge.cpp  WebServerBridge.hpp  World.hpp  WritableResultModel.hpp  _2w1a.hpp  binding.cc  binding.gyp
algorithm/lib/socket.io-client/: CMakeLists.txt
algorithm/source/: AThreadedDataHandler.cpp  AThreadedDataHandler.hpp  AlgoParameters.cpp  AlgoParameters.hpp  Articulation.cpp  Articulation.hpp  BackupDataController.cpp  BackupDataController.hpp  BackupDataParameters.cpp  BackupDataParameters.hpp  Client.cpp  Client.hpp  Fitness.cpp  Fitness.hpp  GeneticAlgoController.cpp  GeneticAlgoController.hpp  Genome.cpp  Genome.hpp  IDataHandler.hpp  IEvent.hpp  IParameters.hpp  Individual.cpp  Individual.hpp  MainController.cpp  MainController.hpp  Maths.cpp  MotherNature.cpp  Object.cpp  Object.hpp  Physics.cpp  Physics.hpp  Radians.hpp  Random.hpp  ResultModel.cpp  ResultModel.hpp  Vector.cpp  Vector.hpp  VrepAPI.cpp  VrepAPI.hpp  VrepParameters.cpp  (+20 more)
algorithm/viewer/: solutionViewer.py
config/: base.example.json  base.json
controllers/: data-backup.js  index.js  real-time.js  vrep-launcher.js
cpp/: binding.cc
documents/: Makefile  algorithm_pseudo_code.md  yuml.mk
documents/class_diagram/: software_diagram.class.yuml.txt
front/: draw.js  init.js
libraries/: express.js  socket-io.js
sample_code/: README.md
sample_code/cpp/: Makefile  main.cpp
sample_code/genetic_algo_cpp/: .gitignore  Chart.cpp  Chart.hpp  Controller.cpp  Controller.hpp  main.cpp  (+3 more)
save/: sample.json  simulation2394.json
views/: index.html
(+7 files in other folders)
